# Manzar

./: .SRCINFO  CONTEXT.md  LICENSE  PKGBUILD  README.md  package.json
.github/workflows/: release.yml
docs/: prd-manzar-image-viewer.md
docs/adr/: 0001-rust-owned-image-protocol.md
scripts/: install-arch.sh
src/: App.tsx  viewerCommands.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/core/: file_actions.rs  image_protocol.rs  image_sequence.rs  metadata_preflight.rs  settings.rs
src/Manzar-0.1.0/: .gitignore  README.md  index.html
src/Manzar-0.1.0/src/: fileDialogs.ts  useImagePresentation.ts
src/Manzar-0.1.0/src-tauri/src/: main.rs
src/Manzar-0.1.0/src-tauri/src/core/: mod.rs  sequence_ordering.rs  viewed_image_descriptor.rs  viewer_session.rs
src/Manzar-0.1.1/: .gitignore  package.json
src/Manzar-0.1.1/packaging/linux/: manzar.desktop
src/Manzar-0.1.1/src/: App.css
src/Manzar-0.1.1/src-tauri/: Cargo.toml  tauri.conf.json
src/Manzar-0.1.1/src-tauri/src/: lib.rs
src/Manzar-0.1.1/src-tauri/src/core/: image_registry.rs  supported_image.rs
